Bug 507448.  Expose the names of the function arguments on jsdIScript.  r=timeless,brendan