js/jsd/jsd_xpc.cpp
@@ -1220,6 +1220,67 @@ jsdScript::GetFunctionName(nsACString &_rval)
 }
 
 NS_IMETHODIMP
+jsdScript::GetParameterNames(PRUint32* count, PRUnichar*** paramNames)
+{
+    ASSERT_VALID_EPHEMERAL;
+    JSContext *cx = JSD_GetDefaultJSContext (mCx);
+    if (!cx) {
+        NS_WARNING("No default context !?");
+        return NS_ERROR_FAILURE;
+    }
+    JSFunction *fun = JSD_GetJSFunction (mCx, mScript);
+
+    JSAutoRequest ar(cx);
+
+    if (!fun || !fun->hasLocalNames() || fun->nargs == 0) {
+        *count = 0;
+        *paramNames = nsnull;
+        return NS_OK;
+    }
+
+    PRUnichar **ret =
+        static_cast<PRUnichar**>(NS_Alloc(fun->nargs * sizeof(PRUnichar*)));
+    if (!ret)
+        return NS_ERROR_OUT_OF_MEMORY;
+
+    void *mark = JS_ARENA_MARK(&cx->tempPool);
+    jsuword *names = js_GetLocalNameArray(cx, fun, &cx->tempPool);
+    if (!names) {
+        NS_Free(ret);
+        return NS_ERROR_OUT_OF_MEMORY;
+    }
+
+    nsresult rv = NS_OK;
+    for (uintN i = 0; i < fun->nargs; ++i) {
+        JSAtom *atom = JS_LOCAL_NAME_TO_ATOM(names[i]);
+        if (!atom) {
+            ret[i] = 0;
+        } else {
+            jsval atomVal = ATOM_KEY(atom);
+            if (!JSVAL_IS_STRING(atomVal)) {
+                NS_FREE_XPCOM_ALLOCATED_POINTER_ARRAY(i, ret);
+                rv = NS_ERROR_UNEXPECTED;
+                break;
+            }
+            JSString *str = JSVAL_TO_STRING(atomVal);
+            ret[i] = NS_strndup(reinterpret_cast<PRUnichar*>(JS_GetStringChars(str)),
+                                JS_GetStringLength(str));
+            if (!ret[i]) {
+                NS_FREE_XPCOM_ALLOCATED_POINTER_ARRAY(i, ret);
+                rv = NS_ERROR_OUT_OF_MEMORY;
+                break;
+            }
+        }
+    }
+    JS_ARENA_RELEASE(&cx->tempPool, mark);
+    if (NS_FAILED(rv))
+        return rv;
+    *count = fun->nargs;
+    *paramNames = ret;
+    return NS_OK;
+}
+
+NS_IMETHODIMP
 jsdScript::GetFunctionObject(jsdIValue **_rval)
 {
     JSFunction *fun = JSD_GetJSFunction(mCx, mScript);
